--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
     <dependency>
       <groupId>org.onebusaway</groupId>
       <artifactId>onebusaway-gtfs-realtime-exporter</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.onebusaway</groupId>
+      <artifactId>onebusaway-guice-jsr250</artifactId>
+      <version>1.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.onebusaway</groupId>
